--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,18 @@
     <link
       rel="icon"
       type="image/png"
-      href="/favicon/favicon-96x96.png"
+      href="favicon/favicon-96x96.png"
       sizes="96x96"
     />
-    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/favicon/apple-touch-icon.png"
+      href="favicon/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="PastePerfect" />
-    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
     <!-- The id MUST be 'prism-theme' because its used by the theme-service to dynamically set the theme -->
     <link id="prism-theme" rel="stylesheet" href="prism-themes/prism.css" />
   </head>
